# ls-8x

./: README.md  pyproject.toml  streamlit_app.py
